--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
       display:block;
     }
 
+    /* FAIXA PRETA DO TOPO */
+    .i2026{
+      width:100%;
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:14px 16px;
+    }
+
+    .i2026 h2{
+      font-size:18px;
+      font-weight:700;
+      letter-spacing:.04em;
+    }
+
     .page{
       min-height:100vh;
       background:#f5f5f7;
@@ -482,6 +497,26 @@
       box-shadow:0 14px 40px rgba(15,23,42,.04);
     }
 
+    .feedbackGrid{
+  display:grid;
+  grid-template-columns:repeat(3,minmax(0,1fr));
+  gap:14px;
+}
+
+.feedbackCard{
+  background:#ffffff;
+  border-radius:16px;
+  border:1px solid rgba(15,23,42,.12);
+  box-shadow:0 14px 40px rgba(15,23,42,.06);
+  overflow:hidden;
+}
+
+.feedbackCard img{
+  width:100%;
+  display:block;
+}
+
+
     .audienceLabel{
       font-size:11px;
       text-transform:uppercase;
@@ -761,6 +796,11 @@
         padding-inline:16px;
       }
 
+      .feedbackGrid{
+  grid-template-columns:1fr;
+}
+
+
       .priceSection{
         padding-inline:16px;
       }
@@ -807,6 +847,10 @@
 </head>
 
 <body>
+  <div class="i2026">
+    <h2>VOCÊ ESTÁ A UM PASSO DE MUDAR SUA ROTINA EM 2026 🔥</h2>
+  </div>
+
   <div class="page">
     <header class="pageHeader" id="topo">
       <div class="headerInner">
@@ -1203,7 +1247,6 @@
           </div>
 
           <div class="priceCtaArea">
-            <!-- Troque o href pelo link do seu checkout, formulário ou link do Notion -->
             <a href="https://pay.kiwify.com.br/r5H2nqm" class="buttonPrimary js-main-buy">
               Baixar meu Planner agora
               <span>🚀</span>
@@ -1219,6 +1262,48 @@
           </div>
         </div>
       </section>
+      <section class="section">
+  <div class="sectionHeader">
+    <div>
+      <h2 class="sectionTitle">
+        O que a galera está dizendo sobre o Planner
+      </h2>
+      <p class="sectionSubtitle">
+        Feedbacks reais de quem já está usando o Planner Quintino Coders
+        para organizar estudos, projetos e rotina dev.
+      </p>
+    </div>
+  </div>
+
+  <div class="feedbackGrid">
+    <!-- CARD 01 -->
+    <div class="feedbackCard">
+      <img src="feedback1.jpg" alt="Feedback 1">
+    </div>
+
+    <!-- CARD 02 -->
+    <div class="feedbackCard">
+      <img src="feedback2.jpg" alt="Feedback 2">
+    </div>
+
+    <!-- CARD 03 -->
+    <div class="feedbackCard">
+      <img src="feedback3.jpg" alt="Feedback 3">
+    </div>
+     <!-- CARD 04 -->
+    <div class="feedbackCard">
+      <img src="feedback4.jpg" alt="Feedback 3">
+    </div> <!-- CARD 05 -->
+    <div class="feedbackCard">
+      <img src="feedback5.jpg" alt="Feedback 3">
+    </div>
+
+    <!-- CARD 03 -->
+    <div class="feedbackCard">
+      <img src="feedback6.jpg" alt="Feedback 3">
+    </div>
+  </div>
+</section>
 
       <section class="section">
         <div class="sectionHeader">
@@ -1282,7 +1367,6 @@
   </div>
 
   <script>
-    // Scroll suave para âncoras internas (#comprar, #o-que-tem etc.)
     document.addEventListener("DOMContentLoaded", function () {
       const internalLinks = document.querySelectorAll('a[href^="#"]');
 
@@ -1298,7 +1382,6 @@
         });
       });
 
-      // Sombra no header quando rolar
       const header = document.querySelector(".pageHeader");
       function handleScroll() {
         if (window.scrollY > 10) {
@@ -1310,15 +1393,10 @@
       window.addEventListener("scroll", handleScroll);
       handleScroll();
 
-      // Tracking básico do clique no botão de download
       const buyButtons = document.querySelectorAll(".js-main-buy");
       buyButtons.forEach(function (btn) {
         btn.addEventListener("click", function () {
           console.log("CTA Planner clicado");
-
-          // Exemplo para plugar depois:
-          // fbq('track', 'Lead', { product: 'Planner Quintino Coders 2026' });
-          // ttq.track('ClickButton', { content_name: 'Planner 2026' });
         });
       });
     });
