--- a/index.html
+++ b/index.html
@@ -1278,29 +1278,29 @@
   <div class="feedbackGrid">
     <!-- CARD 01 -->
     <div class="feedbackCard">
-      <img src="feedback1.jpg" alt="Feedback 1">
+      <img src="/images/feedback1.jpg" alt="Feedback 1">
     </div>
 
     <!-- CARD 02 -->
     <div class="feedbackCard">
-      <img src="feedback2.jpg" alt="Feedback 2">
+      <img src="/images/feedback2.jpg" alt="Feedback 2">
     </div>
 
     <!-- CARD 03 -->
     <div class="feedbackCard">
-      <img src="feedback3.jpg" alt="Feedback 3">
+      <img src="/images/feedback3.jpg" alt="Feedback 3">
     </div>
      <!-- CARD 04 -->
     <div class="feedbackCard">
-      <img src="feedback4.jpg" alt="Feedback 3">
+      <img src="/images/feedback4.jpg" alt="Feedback 3">
     </div> <!-- CARD 05 -->
     <div class="feedbackCard">
-      <img src="feedback5.jpg" alt="Feedback 3">
+      <img src="/images/feedback5.jpg" alt="Feedback 3">
     </div>
 
     <!-- CARD 03 -->
     <div class="feedbackCard">
-      <img src="feedback6.jpg" alt="Feedback 3">
+      <img src="/images/feedback6.jpg" alt="Feedback 3">
     </div>
   </div>
 </section>
